feat: add auth and users
