# controller/todo.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"go-gin-todo/entity"
+	"go-gin-todo/helper"
 	validator "go-gin-todo/lib"
 	"go-gin-todo/service"
 	"net/http"
@@ -9,13 +10,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Security ApiKeyAuth
 // @Summary Get all todos
 // @Description Fetch a list of Todos that belongs to logged in user
 // @Produce  json
 // @Success 200 {array} entity.Todo
 // @Router /todo [get]
 func GetAllTodos(ctx *gin.Context) {
-	todos := service.GetAllTodos()
+	user := helper.GetLoggedInUser(ctx)
+	todos := service.GetAllTodos(user)
 
 	ctx.JSON(http.StatusOK, gin.H{
 		"data": todos,
@@ -23,6 +26,7 @@ func GetAllTodos(ctx *gin.Context) {
 
 }
 
+// @Security ApiKeyAuth
 // @Summary Add a new todo
 // @Description Add a new todo to the list
 // @Accept  json
@@ -31,15 +35,17 @@ func GetAllTodos(ctx *gin.Context) {
 // @Success 201 {object} entity.Todo
 // @Router /todo [post]
 func AddTodo(ctx *gin.Context) {
+	user := helper.GetLoggedInUser(ctx)
 	var todo entity.UpsertTodo
 	if err := ctx.ShouldBind(&todo); err != nil {
 		validator.HandleBindingError(err, ctx)
 		return
 	}
-	newTodo := service.CreateTodo(todo.Title)
+	newTodo := service.CreateTodo(todo.Title, user)
 	ctx.JSON(http.StatusCreated, &newTodo)
 }
 
+// @Security ApiKeyAuth
 // @Summary Fetch single Todo Item
 // @Description get Todo by ID
 // @Accept  json
@@ -48,8 +54,9 @@ func AddTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id} [get]
 func GetSingleTodo(ctx *gin.Context) {
+	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
-	todo, err := service.GetTodoById(id)
+	todo, err := service.GetTodoById(id, user)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, err.Error())
 		return
@@ -58,6 +65,7 @@ func GetSingleTodo(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, &todo)
 }
 
+// @Security ApiKeyAuth
 // @Summary Update existing Todo
 // @Description update Todo by ID
 // @Accept  json
@@ -67,6 +75,7 @@ func GetSingleTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id} [put]
 func UpdateTodo(ctx *gin.Context) {
+	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
 	todo := entity.UpsertTodo{}
 
@@ -75,15 +84,16 @@ func UpdateTodo(ctx *gin.Context) {
 		return
 	}
 
-	updatedTodo, err := service.UpdateTodoName(id, todo.Title)
+	updatedTodo, err := service.UpdateTodoName(id, todo.Title, user)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, err)
+		ctx.JSON(http.StatusNotFound, err.Error())
 		return
 	}
 
 	ctx.JSON(http.StatusOK, &updatedTodo)
 }
 
+// @Security ApiKeyAuth
 // @Summary Complete a Todo
 // @Description complete Todo by ID
 // @Accept  json
@@ -92,16 +102,18 @@ func UpdateTodo(ctx *gin.Context) {
 // @Success 200 {object} entity.Todo
 // @Router /todo/{id}/complete [put]
 func CompleteTodo(ctx *gin.Context) {
+	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
-	todo, err := service.CompleteTodo(id)
+	todo, err := service.CompleteTodo(id, user)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, err)
+		ctx.JSON(http.StatusNotFound, err.Error())
 		return
 	}
 
 	ctx.JSON(http.StatusOK, &todo)
 }
 
+// @Security ApiKeyAuth
 // @Summary Delete Todo
 // @Description delete Todo by ID
 // @Accept  json
@@ -110,12 +122,13 @@ func CompleteTodo(ctx *gin.Context) {
 // @Success 200 {string} string	"ok"
 // @Router /todo/{id} [delete]
 func DeleteTodo(ctx *gin.Context) {
+	user := helper.GetLoggedInUser(ctx)
 	id := ctx.Param("id")
-	err := service.DeleteTodo(id)
+	err := service.DeleteTodo(id, user)
 	if err != nil {
-		ctx.JSON(http.StatusNotFound, err)
+		ctx.JSON(http.StatusNotFound, err.Error())
 		return
 	}
 
-	ctx.JSON(http.StatusOK, "")
+	ctx.JSON(http.StatusOK, "ok")
 }
